tests/parser/should_fail/timed_let.csp
P = let 
        f = 1
        print 0
    within 0
